# Uart-baremetal-rp2040

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.c
